--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.7",
+    "autoprefixer": "^9",
+    "postcss": "^7",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
     "vuex": "^4.0.2"
